add functions for Child and Present+ tests